Work with content and styles"

--- a/src/pages/sections/Contacts/Contacts.scss
+++ b/src/pages/sections/Contacts/Contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  background-color: rgb(170, 233, 240);
+  background-color: rgb(200, 243, 248);
   width: 100%;
   margin: 0;
 }
@@ -60,13 +60,15 @@
 // mobile
 @media (max-width: 599px) and (orientation: portrait) {
   .contacts {
-    height: auto;
+    height: 50vh;
   }
 
   .contacts__wrapper {
     width: 90%;
     margin-left: 5%;
     flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   .contacts__info {
@@ -148,11 +150,14 @@
     width: 90%;
     margin-left: 5%;
     align-items: center;
+    justify-content: center;
   }
 
   .contacts__info {
     height: 68%;
     width: 55%;
+    align-items: center;
+    justify-content: center;
 
     .contacts__phone a,
     .contacts__email a {
@@ -233,8 +238,7 @@
     justify-content: center;
     text-align: center;
 
-    .contacts__phone {
-    }
+    .contacts__phone {}
 
     .contacts__phone a,
     .contacts__email a {
