--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -15,7 +15,8 @@ video:focus {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-weight: 900;
 }
 
@@ -45,36 +46,42 @@ ul {
 ol {
   list-style: none;
   counter-reset: my-awesome-counter;
+  margin-left: 0;
+  padding-left: 0;
+
+  li {
+    padding-left: 1em;
+    text-indent: 0em;
+    padding-bottom: 1em;
+    counter-increment: my-awesome-counter;
+
+    &:before {
+      content: counter(my-awesome-counter) " - ";
+      color: black;
+      font-weight: bold;
+    }
+  }
 }
 
-ol li {
-  counter-increment: my-awesome-counter;
-  margin-bottom: 1em;
-}
-
-ol li::before {
-  content: counter(my-awesome-counter) " - ";
-  color: black;
-  font-weight: bold;
-}
-
-
-
-
-@media screen and (max-width: 1023px) and (orientation: landscape) {}
-
-// mobile
-@media (max-width: 599px) {
-  h1 {
-    font-size: 39px;
-    line-height: 47px;
+@media screen and (max-width: 1023px) and (orientation: landscape) {
+  h1,
+  h2,
+  h3 {
     text-align: center;
   }
 
+  h1 {
+    font-size: 42px;
+    line-height: 47px;
+  }
+
   h2 {
-    font-size: 32px;
+    font-size: 39px;
     line-height: 40px;
-    text-align: center;
+  }
+
+  h3 {
+    font-size: 28px;
   }
 
   p,
@@ -88,21 +95,48 @@ ol li::before {
     width: 90%;
     margin-left: 5%;
   }
+}
 
+// mobile
+@media (max-width: 599px) {
+  h1,
+  h2,
+  h3 {
+    text-align: left;
+  }
 
+  p,
+  li {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: left;
+  }
+
+  section {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
+  h1,
+  h2,
+  h3 {
+    text-align: center;
+  }
+
   h1 {
-    font-size: 50px;
-    line-height: 60px;
+    font-size: 52px;
   }
 
   h2 {
-    font-size: 40px;
-    line-height: 50px;
-    text-align: center;
+    font-size: 47px;
+    line-height: 55px;
+  }
+
+  h3 {
+    font-size: 32px;
   }
 
   p,
@@ -115,42 +149,57 @@ ol li::before {
     width: 80%;
     margin-left: 10%;
   }
-
-
 }
 
 // tablet-landscape
 @media (min-width: 900px) {
-  h1 {
-    font-size: 50px;
-    line-height: 60px;
+  h1,
+  h2,
+  h3 {
     text-align: center;
   }
 
+  h1 {
+    font-size: 60px;
+  }
+
   h2 {
-    font-size: 40px;
-    line-height: 50px;
-    text-align: center;
+    font-size: 52px;
+    line-height: 60px;
+  }
+
+  h3 {
+    font-size: 42px;
   }
 
   p {
     font-size: 21px;
     line-height: 33px;
   }
-
-
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
-
   h1,
-  h2 {
+  h2,
+  h3 {
     text-align: left;
   }
 
+  h1 {
+    font-size: 60px;
+  }
 
+  h2 {
+    font-size: 52px;
+    line-height: 60px;
+  }
+
+  h3 {
+    font-size: 42px;
+  }
 }
 
 // desktop x-large
-@media (min-width: 1800px) {}
+@media (min-width: 1800px) {
+}
