--- a/src/pages/sections/Attention/Attention.scss
+++ b/src/pages/sections/Attention/Attention.scss
@@ -1,6 +1,6 @@
 .attention {
   width: 100%;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -14,14 +14,60 @@
     text-align: center;
   }
 
-  .button {
-    width: 200px;
+  .attention__mail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .attention__button {
     align-self: center;
-    margin-bottom: 2em;
+    height: 100%;
+    text-transform: uppercase;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    border-color: black;
+    border-radius: 4rem;
+    box-shadow: 0 40px 50px 0 rgba(0, 0, 0, 0.1);
+    color: white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    letter-spacing: 1px;
+    background-position: center center;
+    border-color: transparent;
+    border-style: solid;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
+      border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    opacity: 0.8;
+    outline: 0;
+    background-color: rgb(241, 77, 40);
+    box-shadow: 0px 10px 30px 0px rgba(228, 228, 230, 0.3);
+
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
   }
 }
 
-@media screen and (max-width: 1023px) and (orientation: landscape) {}
+@media screen and (max-width: 1023px) and (orientation: landscape) {
+  .attention__mail {
+    width: 80%;
+    height: 4em;
+    margin-bottom: 2em;
+    margin-top: 1em;
+  }
+
+  .attention__button {
+    font-size: 15px;
+  }
+}
 
 // mobile
 @media (max-width: 599px) {
@@ -29,11 +75,18 @@
     margin-top: 1.5em;
 
     p {
-      width: 80%;
+      width: 90%;
     }
 
-    .button {
-      width: 40%;
+    .attention__mail {
+      width: 80%;
+      height: 4em;
+      margin-bottom: 2em;
+      margin-top: 1em;
+    }
+
+    .attention__button {
+      font-size: 15px;
     }
   }
 }
@@ -47,8 +100,15 @@
       width: 80%;
     }
 
-    .button {
-      width: 40%;
+    .attention__mail {
+      width: 320px;
+      height: 4em;
+      margin-bottom: 2em;
+      margin-top: 1em;
+    }
+
+    .attention__button {
+      font-size: 18px;
     }
   }
 }
@@ -62,8 +122,14 @@
       width: 80%;
     }
 
-    .button {
-      width: 40%;
+    .attention__mail {
+      width: 320px;
+      height: 4em;
+      margin-bottom: 2em;
+    }
+
+    .attention__button {
+      font-size: 18px;
     }
   }
 }
@@ -75,8 +141,14 @@
       width: 80%;
     }
 
-    .button {
-      width: 40%;
+    .attention__mail {
+      width: 320px;
+      height: 4em;
+      margin-bottom: 2em;
+    }
+
+    .attention__button {
+      font-size: 18px;
     }
   }
 }
@@ -90,9 +162,14 @@
       width: 60%;
     }
 
-    .button {
-      width: 380px;
-      height: 75px;
+    .attention__mail {
+      width: 320px;
+      height: 4em;
+      margin-bottom: 2em;
+    }
+
+    .attention__button {
+      font-size: 18px;
     }
   }
 }
