--- a/src/pages/sections/Intro/Intro.scss
+++ b/src/pages/sections/Intro/Intro.scss
@@ -3,9 +3,53 @@
   background-size: 100% 100%;
 }
 
+.intro__email {
+  color: #2ea2af;
+}
+
+.intro__phone {
+  color: #FD8369;
+}
+
+.intro {
+  display: flex;
+  align-items: center;
+
+  p {
+    font-weight: 600;
+  }
+
+  .intro__links {
+    display: flex;
+
+
+    a {
+      font-weight: 900;
+      text-decoration: none;
+    }
+  }
+}
+
 @media screen and (max-width: 1023px) and (orientation: landscape) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 0em;
+    height: auto;
+  }
+
+  .intro__text {
+    width: 100%;
+  }
+
   .intro__image {
-    display: none;
+    display: none !important;
+  }
+
+  .intro__links {
+    font-size: 21px;
   }
 }
 
@@ -14,16 +58,10 @@
   .intro {
     display: flex;
     flex-direction: column-reverse;
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 1em;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2em;
     height: auto;
-  }
-
-  .button {
-    margin-top: 1em;
-    width: 100%;
-    height: 50px;
   }
 
   .intro__text {
@@ -31,7 +69,19 @@
   }
 
   .intro__image {
+    display: block;
+    width: 100%;
     height: 40vh;
+  }
+
+  .intro__links {
+    flex-direction: column;
+
+    * {
+      align-self: center;
+      margin-top: 0.75em;
+      font-size: 1.2em;
+    }
   }
 }
 
@@ -47,20 +97,21 @@
     text-align: left;
   }
 
-  .button {
-    margin-top: 1.4em;
-    width: 100%;
-    height: 75px;
-    font-size: 21px;
-  }
-
   .intro__text {
     width: 100%;
   }
 
   .intro__image {
+    display: block;
     margin-top: 1.4em;
     height: 40vh;
+    width: 100%;
+  }
+
+  .intro__links {
+    width: 95%;
+    font-size: 21px;
+    justify-content: space-between;
   }
 }
 
@@ -76,27 +127,21 @@
     text-align: center;
   }
 
-  .button {
-    margin-right: 1.4em;
-    width: 200px;
-    height: 50px;
-    font-size: 15px;
-  }
 
   .intro__text {
     width: 100%;
   }
 
-  .intro__buttons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
 
   .intro__image {
     height: 50vh;
     width: 100%;
+  }
+
+  .intro__links {
+    width: 100%;
+    font-size: 21px;
+    justify-content: space-around;
   }
 }
 
@@ -112,25 +157,21 @@
     text-align: left;
   }
 
-  .button {
-    margin-right: 1.4em;
-    width: 45%;
-    height: 65px;
-    font-size: 18px;
-  }
 
   .intro__text {
     width: 50%;
   }
 
-  .intro__buttons {
-    display: flex;
-    flex-direction: row;
-  }
 
   .intro__image {
     height: 50vh;
     width: 45%;
+  }
+
+  .intro__links {
+    width: 100%;
+    font-size: 21px;
+    justify-content: space-between;
   }
 }
 
@@ -146,25 +187,20 @@
     text-align: left;
   }
 
-  .button {
-    margin-top: 1em;
-    margin-right: 1.4em;
-    width: 45%;
-    height: 65px;
-    font-size: 18px;
-  }
-
   .intro__text {
     width: 40%;
-  }
-
-  .intro__buttons {
-    display: flex;
-    flex-direction: row;
   }
 
   .intro__image {
     height: 50vh;
     width: 45%;
+  }
+
+  .intro__links {
+    width: 90%;
+
+    a {
+      font-size: 1.1em;
+    }
   }
 }
