--- a/src/pages/sections/Prices/Prices.scss
+++ b/src/pages/sections/Prices/Prices.scss
@@ -10,15 +10,14 @@
 
 @media screen and (max-width: 1023px) and (orientation: landscape) {
   .prices__image {
-    width: 100%;
-    height: 50vh;
+    display: none;
   }
 }
 
-// tublet-portrait
+// mobile-portrait
 @media (max-width: 599px) {
   .prices {
-    margin-top: 0em;
+    margin-top: -5em;
   }
 
   .prices__image {
