--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -64,6 +64,43 @@ ol {
 }
 
 @media screen and (max-width: 1023px) and (orientation: landscape) {
+
+  h1,
+  h2,
+  h3 {
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 42px;
+    line-height: 55px;
+  }
+
+  h2 {
+    font-size: 39px;
+    line-height: 40px;
+  }
+
+  h3 {
+    font-size: 28px;
+  }
+
+  p,
+  li {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: left;
+  }
+
+  section {
+    width: 90%;
+    margin-left: 5%;
+  }
+}
+
+// mobile
+@media (max-width: 599px) and (orientation: portrait) {
+
   h1,
   h2,
   h3 {
@@ -92,34 +129,14 @@ ol {
   }
 
   section {
-    width: 90%;
-    margin-left: 5%;
-  }
-}
-
-// mobile
-@media (max-width: 599px) {
-  h1,
-  h2,
-  h3 {
-    text-align: left;
-  }
-
-  p,
-  li {
-    font-size: 18px;
-    line-height: 28px;
-    text-align: left;
-  }
-
-  section {
-    width: 90%;
-    margin-left: 5%;
+    width: 85%;
+    margin-left: 7.5%;
   }
 }
 
 // tublet-portrait
 @media (min-width: 600px) {
+
   h1,
   h2,
   h3 {
@@ -153,6 +170,7 @@ ol {
 
 // tablet-landscape
 @media (min-width: 900px) {
+
   h1,
   h2,
   h3 {
@@ -176,10 +194,16 @@ ol {
     font-size: 21px;
     line-height: 33px;
   }
+
+  section {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
+
   h1,
   h2,
   h3 {
@@ -191,15 +215,24 @@ ol {
   }
 
   h2 {
-    font-size: 52px;
+    font-size: 48px;
     line-height: 60px;
   }
 
   h3 {
-    font-size: 42px;
+    font-size: 38px;
+  }
+
+  section {
+    width: 80%;
+    margin-left: 10%;
   }
 }
 
 // desktop x-large
 @media (min-width: 1800px) {
+  section {
+    width: 60%;
+    margin-left: 20%;
+  }
 }
