--- a/src/pages/sections/Audio/Audio.scss
+++ b/src/pages/sections/Audio/Audio.scss
@@ -1,3 +1,7 @@
+.audio {
+  width: inherrit;
+}
+
 .audio__image {
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -15,8 +19,6 @@
     margin-top: 2em;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .audio__text {
@@ -36,8 +38,6 @@
     margin-top: 3.5em;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .audio__text {
@@ -57,8 +57,6 @@
     margin-top: 3.5em;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin-left: 5%;
   }
 
   .audio__text {
@@ -79,8 +77,6 @@
     margin-top: 7.5em;
     display: flex;
     flex-direction: row;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .audio__text {
@@ -102,18 +98,16 @@
     margin-top: 7.5em;
     display: flex;
     flex-direction: row;
-    width: 60%;
-    margin-left: 20%;
   }
 
   .audio__text {
-    width: 42%;
+    width: 49%;
     height: auto;
     align-self: center;
   }
 
   .audio__image {
-    width: 48%;
+    width: 42%;
     height: 40vh;
   }
 }
