--- a/src/pages/sections/AudioAdvantages/AudioAdvantages.scss
+++ b/src/pages/sections/AudioAdvantages/AudioAdvantages.scss
@@ -1,13 +1,10 @@
-@media screen and (max-width: 1023px) and (orientation: landscape) {
-}
+@media screen and (max-width: 1023px) and (orientation: landscape) {}
 
 // mobile
-@media (max-width: 599px) {
-}
+@media (max-width: 599px) {}
 
 // tublet-portrait
-@media (min-width: 600px) {
-}
+@media (min-width: 600px) {}
 
 // tablet-landscape
 @media (min-width: 900px) {
