--- a/src/pages/sections/Stages/Stages.scss
+++ b/src/pages/sections/Stages/Stages.scss
@@ -6,6 +6,7 @@
 .stages {
   display: flex;
   flex-direction: column;
+  width: inherrit;
 }
 
 @media screen and (max-width: 1023px) and (orientation: landscape) {
@@ -15,10 +16,8 @@
 }
 
 // mobile
-@media (max-width: 599px) {
+@media (max-width: 599px) and (orientation: portrait) {
   .stages {
-    width: 90%;
-    margin-left: 5%;
     margin-top: 3.5em;
   }
 
@@ -29,7 +28,7 @@
 }
 
 // tublet-portrait
-@media (min-width: 600px) {
+@media (min-width: 600px) and (orientation: portrait) {
   .stages {
     margin-top: 5em;
   }
@@ -41,18 +40,13 @@
 }
 
 // tablet-landscape
-@media (min-width: 900px) {
-  .stages {
-    width: 90%;
-    margin-left: 5%;
-  }
+@media (min-width: 900px) and (orientation: landscape) {
+  .stages {}
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
   .stages {
-    width: 80%;
-    margin-left: 10%;
     margin-top: 7.5em;
   }
 }
@@ -60,8 +54,6 @@
 // desktop x-large
 @media (min-width: 1800px) {
   .stages {
-    width: 60%;
-    margin-left: 20%;
     margin-top: 7.5em;
   }
 
