--- a/src/pages/sections/Video/Video.scss
+++ b/src/pages/sections/Video/Video.scss
@@ -1,3 +1,7 @@
+.video {
+  width: inherrit;
+}
+
 .video__image {
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -10,13 +14,11 @@
 }
 
 // mobile
-@media (max-width: 599px) {
+@media (max-width: 599px) and (orientation: portrait) {
   .video {
     margin-top: 1em;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .video__text {
@@ -25,7 +27,7 @@
   }
 
   .video__image {
-    width: 100%;
+    width: auto;
     height: 40vh;
   }
 }
@@ -36,8 +38,6 @@
     margin-top: 3.5em;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .video__text {
@@ -57,8 +57,6 @@
     margin-top: 3.5em;
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin-left: 5%;
   }
 
   .video__text {
@@ -79,8 +77,6 @@
     margin-top: 7.5em;
     display: flex;
     flex-direction: row;
-    width: 80%;
-    margin-left: 10%;
   }
 
   .video__text {
@@ -102,18 +98,16 @@
     margin-top: 7.5em;
     display: flex;
     flex-direction: row;
-    width: 60%;
-    margin-left: 20%;
   }
 
   .video__text {
-    width: 42%;
+    width: 48%;
     height: auto;
     align-self: center;
   }
 
   .video__image {
-    width: 48%;
+    width: 42%;
     height: 40vh;
   }
 }
