--- a/src/pages/sections/VideoAdvantages/VideoAdvantages.scss
+++ b/src/pages/sections/VideoAdvantages/VideoAdvantages.scss
@@ -1,24 +1,21 @@
 @media screen and (max-width: 1023px) and (orientation: landscape) {}
 
 // mobile
-@media (max-width: 599px) {}
+@media (max-width: 599px) {
+    .video__advantages {}
+}
 
 // tublet-portrait
 @media (min-width: 600px) {}
 
 // tablet-landscape
 @media (min-width: 900px) {
-    .video__advantages {
-        width: 90%;
-        margin-left: 5%;
-    }
+    .video__advantages {}
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
     .video__advantages {
-        width: 80%;
-        margin-left: 10%;
         margin-top: 7.5em;
     }
 }
@@ -26,8 +23,6 @@
 // desktop x-large
 @media (min-width: 1800px) {
     .video__advantages {
-        width: 60%;
-        margin-left: 20%;
         margin-top: 7.5em;
     }
 }
