--- a/src/pages/sections/Attention/Attention.scss
+++ b/src/pages/sections/Attention/Attention.scss
@@ -18,6 +18,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    a {
+      text-decoration: none;
+    }
   }
 
   .attention__button {
