Add telegram and whatsapp contacts

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 1023px) and (orientation: landscape) {
   .footer {
-    height: 50px;
+    height: auto;
   }
 
   .footer__wrapper {
