--- a/src/pages/sections/Prices/Prices.scss
+++ b/src/pages/sections/Prices/Prices.scss
@@ -12,6 +12,12 @@
   .prices__image {
     display: none;
   }
+
+  .prices {
+    h2 {
+      margin-top: 2em;
+    }
+  }
 }
 
 // mobile-portrait
