--- a/src/pages/sections/Contacts/Contacts.scss
+++ b/src/pages/sections/Contacts/Contacts.scss
@@ -29,9 +29,14 @@
   }
 }
 
+.contacts__messengers {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media screen and (max-width: 1023px) and (orientation: landscape) {
   .contacts {
-    height: 75vh;
+    height: 100vh;
   }
 
   .contacts__wrapper {
@@ -55,7 +60,23 @@
   .contacts__email a {
     font-size: 1.5em;
   }
+
+  .contacts__messengers {
+    width: 20%;
+    margin-left: 40%;
+    height: 2em;
+    margin-top: 1em;
+    margin-bottom: 3em;
+  }
+
+  .contacts__messengers a svg {
+    width: 45px;
+    height: 45px;
+  }
+
 }
+
+
 
 // mobile
 @media (max-width: 599px) and (orientation: portrait) {
@@ -94,12 +115,23 @@
       font-size: 1.5em;
     }
   }
+
+  .contacts__messengers {
+    width: 34%;
+    height: 2em;
+    margin-top: 1em;
+  }
+
+  .contacts__messengers a svg {
+    width: 45px;
+    height: 45px;
+  }
 }
 
 // tublet-portrait
 @media (min-width: 600px) and (orientation: portrait) {
   .contacts {
-    height: 40vh;
+    height: 50vh;
   }
 
   .contacts__wrapper {
@@ -138,6 +170,17 @@
       font-size: 1.5em;
     }
   }
+
+  .contacts__messengers {
+    width: 24%;
+    height: 2em;
+    margin-top: 3em;
+  }
+
+  .contacts__messengers a svg {
+    width: 55px;
+    height: 55px;
+  }
 }
 
 // tablet-landscape
@@ -172,12 +215,24 @@
       font-size: 1.5em;
     }
   }
+
+  .contacts__messengers {
+    width: 24%;
+    height: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .contacts__messengers a svg {
+    width: 45px;
+    height: 45px;
+  }
 }
 
 // desktop/laptop
 @media (min-width: 1200px) {
   .contacts {
-    height: 55vh;
+    height: 65vh;
   }
 
   .contacts__wrapper {
@@ -193,7 +248,7 @@
   }
 
   .contacts__info {
-    height: 65%;
+    height: 75%;
     width: 65%;
     align-items: center;
     justify-content: space-between;
@@ -210,6 +265,18 @@
     .contacts__email a {
       font-size: 1.5em;
     }
+  }
+
+  .contacts__messengers {
+    width: 15%;
+    height: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .contacts__messengers a svg {
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -252,5 +319,17 @@
     .contacts__email a {
       font-size: 1.5em;
     }
+  }
+
+  .contacts__messengers {
+    width: 20%;
+    height: 2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .contacts__messengers a svg {
+    width: 40px;
+    height: 40px;
   }
 }
